spacing fixes

--- a/src/components/BiggerRightWithButtons/BiggerRightWithButtons.module.scss
+++ b/src/components/BiggerRightWithButtons/BiggerRightWithButtons.module.scss
@@ -19,8 +19,9 @@
   }
 
   .TextSide {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    // padding-top: 100px;
+    // padding-bottom: 100px;
+    padding: 80 0px;
     display: flex;
     justify-content: center;
     align-items: center;
