--- a/src/components/FullWidthImageRedBtn/FullWidthImageRedBtn.module.scss
+++ b/src/components/FullWidthImageRedBtn/FullWidthImageRedBtn.module.scss
@@ -34,8 +34,9 @@
   }
 
   .Inner {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    // padding-top: 100px;
+    // padding-bottom: 100px;
+    padding: 80px 0px;
     position: relative;
     z-index: 2;
   }
